fixed wrong z-index in files view

--- a/structr/structr-ui/src/main/webapp/structr/css/main.css
+++ b/structr/structr-ui/src/main/webapp/structr/css/main.css
@@ -143,8 +143,8 @@ img.disabled {
     border: none;
     width: 400px;
     padding: 6px 12px 0 12px;
-    overflow: auto ! important;
-    /*    height: 1000px ! important;*/
+/*    overflow: auto ! important;*/
+    height: 1000px ! important;
 }
 
 #images > div:first-child {
@@ -466,7 +466,7 @@ span.id {
 }
 
 img.button {
-/*    display: none;*/
+    /*    display: none;*/
     cursor: pointer;
 }
 
